# pydantic-bind

./: CODEOWNERS  MANIFEST.in  README.md  pyproject.toml  setup.py
pydantic-bind/: base.py  cpp_generator.py
pydantic_bind/: __init__.py  _dataclasses.py  _descriptors.py  _pybind.py  _pydantic.py  _redirect.py  _redirect_meta.py  base.py  cpp_generator.py  example.py
pydantic_bind/include/msgpack/: msgpack.h  msgpack_define.h
pydantic_bind/share/cmake/pydantic-bind/: pydantic-bindConfig.cmake
pydantic_bind/share/cmake/pydantic_bind/: pydantic_bindConfig.cmake
share/cmake/: pydantic-bindConfig.cmake
share/cmake/pydantic-bind/: pydantic-bindConfig.cmake
